--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -33,7 +33,7 @@ steps:
 - task: PublishBuildArtifacts@1
   inputs:
     PathtoPublish: './artifacts'
-    ArtifactName: 'Screensaver.Client.Python'
+    ArtifactName: 'screensaver-client-python'
     publishLocation: 'Container'
 
 # - task: ArchiveFiles@2
